--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,23 @@ body {
   font-family: 'Source Code Pro', monospace;
   background-color: #1D1D1D;
   display: grid;
-  row-gap: 30px;
+  row-gap: 15px;
   grid-template-rows: auto;
   grid-template-areas:
   "header"
   "transition"
-  "content"      
+  "skills"
+  "projects"
+  "contact"      
 }
 
 .header{
+    margin-top: 60px;
+    margin-bottom: 20px;
     grid-area: header;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    max-width: 100%;
     
 }
 
@@ -85,6 +90,7 @@ a:link {
     
 }
 
+
 .header__description {
     color: #D6D6D6;
 }
@@ -92,6 +98,38 @@ a:link {
     border-radius: 25px;
     border-color: #D6D6D6;
     border-style: solid;
+}
+
+@media (max-width: 414px){
+    .header{
+        margin-top: 45px;
+        margin-bottom: 20px;
+        grid-area: header;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        max-width: 100%;
+        grid-template-areas:
+        "header-avatar" 
+        "header-about"
+        ;
+        
+    }
+
+    .header__about{
+        grid-area: header-about ;
+        margin: 20px;
+        justify-self: end;
+        align-self: center;
+    }
+    
+    .header__img {
+        grid-area: header-avatar;
+      border-radius: 250px;
+       border-color: #D6D6D6;
+       border-style: solid; 
+       height:150px;
+       width: 150px;
+    }
 }
 
 strong {
@@ -106,6 +144,10 @@ button {
 
 button:hover{
     background-color: #32a25f;
+}
+
+.download{
+    color: #1D1D1D;
 }
 
 
@@ -128,6 +170,7 @@ button:hover{
   }
   
   @keyframes bounce {
+
     0%, 20%, 50%, 80%, 100% {
       transform: translateY(0);
     }
@@ -140,8 +183,9 @@ button:hover{
   }
 
 .content{
-    margin: 25px;
-    grid-area: content;
+    background-color: #1D1D1D;
+    margin: 0px 35px 0px 35px;  
+    grid-area: skills;
     display: grid;
     grid-template-rows: auto;
     gap: 1rem;
@@ -152,7 +196,7 @@ button:hover{
     
 }
 .content__title {
-    margin: 35px;    
+    margin: 0px 35px 0px 35px;     
     grid-area: title;
     place-self: center;
     color: #32a25f;
@@ -161,8 +205,14 @@ button:hover{
 .content__box {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 1rem;
-    grid-area: boxes
+    gap: 1.5rem;
+    grid-area: boxes;
+  
+}
+
+.content__card {
+    padding-top: 5px;
+    background-color: #1a1d28;
 }
 
 
@@ -184,8 +234,10 @@ button:hover{
     height: 28px; 
 }
 
+
 .card__icon {
   color: #32a25f;
+  margin-top: 10px;
   margin-left: 20px;
 }
 
@@ -204,3 +256,203 @@ button:hover{
   -o-animation: fa-blink .75s linear infinite;
   animation: fa-blink .75s linear infinite;
 }
+
+.projects{
+    background-color:  #1D1D1D;
+    margin: 0px 35px 0px 35px;  
+    grid-area: projects;
+    display: grid;
+    grid-template-rows: auto;
+    gap: 1rem;
+    grid-template-areas: 
+    "projects-title"
+    "projects-boxes"
+    ;
+    
+}
+.projects__title {
+    margin: 0px 35px 35px 35px;     
+    grid-area: projects-title;
+    place-self: center;
+    color: #32a25f;
+}
+
+.project__box {
+    grid-area: projects-boxes;
+    color: #32a25f;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(520px, 1fr));
+    column-gap: 50px;
+    row-gap: 35px;
+    
+}
+
+.box {
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: #32a25f;
+
+}
+
+.box-over{
+    display: flex;
+    flex-direction: row;
+    justify-content:  flex-start;
+    color: #32a25f;
+}
+
+.theme {
+  width: 250px;
+}
+
+.project__content{
+    width: 100px;
+    
+}
+
+.content__over{
+    align-items: flex-end;
+}
+
+.project__text {
+    flex-grow: 1;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    color: #D6D6D6;
+}
+
+.project__img {
+    
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;    
+    align-self: center;
+    padding: 35px;
+    background-color: #1a1d28;
+    margin-right: 20px; 
+    margin-bottom: 0;
+}
+
+
+.project__description {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.project__buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-self: start;
+}
+
+.project__buttons i {
+    padding-right: 1em;
+}
+
+.project-link {
+    color:#32a25f;
+}
+
+.project-link:hover{
+    color: #3Df487;
+}
+
+.project__item {
+  border-radius: 15px;
+  
+}
+
+.contact{
+    background-color:  #1D1D1D;
+    margin: 0px 35px 0px 35px;  
+    grid-area: contact;
+    display: grid;
+    grid-template-rows: auto;
+    gap: 1rem;
+    grid-template-areas: 
+    "contact-title"
+    "contact-box"
+    ;
+}
+
+.contact__title{
+    grid-area: contact-title;
+    margin: 35px 35px 35px 10px;     
+    place-self: center;
+    color: #32a25f;
+}
+
+.contact__box{
+    grid-area: contact-box;
+    place-self: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact__form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+label {
+    margin: 15px;
+    color: #32a25f;
+    display: flex;
+    flex-direction: column;
+}
+
+input[type=text] {
+    height: 40px;
+    width: 480px;
+    background-color: #1a1d28;
+    color: #3Df487;
+    border-color: #D6D6D6;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+   
+}
+
+textarea[type=text] {
+    height: 100px;
+    width: 480px;
+    background-color: #1a1d28;
+    border-color: #D6D6D6;
+    color: #3Df487;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+   
+}
+
+button[type=submit] {
+    height: 40px;
+    width: 480px;
+    background-color: #32a25f;
+    border-color: #32a25f;
+    color: #1D1D1D;
+    border-radius: 5px;
+}
+
+
+button[type=submit]:hover {
+    background-color: #3Df487;
+}
+
+label{
+    margin-bottom: 5px;
+}
+
+
+.send {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 8px;
+}
+
+
