--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ a:link {
         margin-bottom: 20px;
         grid-area: header;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         max-width: 100%;
         grid-template-areas:
         "header-avatar" 
@@ -121,9 +121,13 @@ a:link {
         justify-self: end;
         align-self: center;
     }
+
+    .header__avatar{
+        grid-area:  header-avatar;
+    }
     
     .header__img {
-        grid-area: header-avatar;
+     
       border-radius: 250px;
        border-color: #D6D6D6;
        border-style: solid; 
@@ -407,7 +411,7 @@ label {
 
 input[type=text] {
     height: 40px;
-    width: 480px;
+    width: 550px;
     background-color: #1a1d28;
     color: #3Df487;
     border-color: #D6D6D6;
@@ -419,7 +423,7 @@ input[type=text] {
 
 textarea[type=text] {
     height: 100px;
-    width: 480px;
+    width: 550px;
     background-color: #1a1d28;
     border-color: #D6D6D6;
     color: #3Df487;
@@ -431,7 +435,7 @@ textarea[type=text] {
 
 button[type=submit] {
     height: 40px;
-    width: 480px;
+    width: 550px;
     background-color: #32a25f;
     border-color: #32a25f;
     color: #1D1D1D;
@@ -443,7 +447,7 @@ button[type=submit]:hover {
     background-color: #3Df487;
 }
 
-label{
+label #text {
     margin-bottom: 5px;
 }
 
@@ -454,5 +458,3 @@ label{
     align-items: center;
     margin: 8px;
 }
-
-
